--- a/TSSM_PR1/TSSM_PR1.csproj
+++ b/TSSM_PR1/TSSM_PR1.csproj
@@ -8,4 +8,16 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="639709.png" />
+    <None Remove="c4.png" />
+    <None Remove="Безымянный.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="639709.png" />
+    <Resource Include="c4.png" />
+    <Resource Include="Безымянный.png" />
+  </ItemGroup>
+
 </Project>
